# cartracker

./: .gitignore  .gitmodules  .pdm-python  CLAUDE.md  LICENSE  Pipfile  README.md  config.yaml  execute_guiff.py  pyproject.toml  requirements.in  requirements.txt  tracking_test.py
cartracker/: __init__.py  __main__.py  config.yaml  core.py  util.py
cartracker/dataset/: __init__.py  generator.py  label_studio.py  sc_dataset.py  yolov8_dataset.py
cartracker/model/: yolo_vgg.py
cartracker/ros/: __init__.py  simulation.py  tracker.py
cartracker/tester/: yolo_vgg_tester.py  yolo_vgg_tester.yaml
cartracker/trainer/: yolo_vgg_trainer.py  yolo_vgg_trainer.yaml  yolov8_trainer.py
cartracker/trainer/yolo_trainer/: config.yaml  trainer.py
cartracker_v2/: __main__.py  core.py  utils.py
cartracker_v2/dataset/: __init__.py  label_studio.py  sc_dataset.py  songdo_dataset.py
cartracker_v2/models/: yolovgg.py
cartracker_v2/recorder/: video_recorder.py
cartracker_v2/tracker/: simple_tracker.py  split_tracker.py
cartracker_v2/tracker/deep_sort/: linear_assignment.py
config/: config.yaml  yolov8.yaml
config/dataset/: songdo.yaml
config/model/: yolovgg.yaml  yolovgg_960.yaml
config/tracking/: base.yaml
config/training/: base.yaml  config.yaml
config/training/model/: yolovgg.yaml
data/dataset/: README.md
guiff_core/: __init__.py  core.py
pytrainer/: __init__.py  worker.py
samples/: execute_cartracker.py  execute_guiff_convert.py
src/scart/: __main__.py
src/scart/bagloader/: v250805.py
