[project]
name = "sck-cartracker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Seungbin Yim", email = "ysb06@hotmail.com"},
]
dependencies = ["opencv-python>=4.12.0.88", "bagpy>=0.5", "tqdm>=4.67.1", "rfdetr>=1.2.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
